Fixed some problems and add dark mode features

--- a/src/main.css
+++ b/src/main.css
@@ -8,17 +8,12 @@ body {
 }
 
 .navbar-fixed {
-  @apply fixed z-[9999] bg-white bg-opacity-70 backdrop-blur-sm;
+  @apply fixed z-[9999] bg-white dark:bg-dark dark:bg-opacity-60 bg-opacity-70 backdrop-blur-sm;
   box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
 }
 
 .hamburger-line {
-  display: block;
-  width: 30px;
-  height: 2px;
-  background-color: #020617;
-  margin-top: 8px;
-  margin-bottom: 8px;
+  @apply my-2 block h-[2px] w-[30px] bg-black dark:bg-white;
 }
 
 .hamburger-active > span:nth-child(1) {
